cabal-version:      2.4
name:               Parser
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             SimoneZahn

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable Parser
    main-is:          Main.hs

   -- Modules included in this executable, other than Main.
    other-modules:    Tests
                      Grammar

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0
                    , containers >= 0.6.7
                    , mtl >= 2.2.2
    hs-source-dirs:   app
    default-language: Haskell2010
